@@ -1,5 +1,5 @@
 <Type Name="TreeViewColumnSizing" FullName="Gtk.TreeViewColumnSizing">
-  <TypeSignature Language="C#" Maintainer="auto" Value="public enum TreeViewColumnSizing;" />
+  <TypeSignature Language="C#" Maintainer="Jonathan Kessler (Jwkpiano1@comcast.net)" Value="public enum TreeViewColumnSizing;" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>The sizing method the column uses to determine its width.</summary>
+    <remarks>Please note that Autosize is inefficient for large views and can make columns appear choppy.</remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,8 +34,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Columns only get bigger in reaction to changes in the model.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Autosize">
@@ -46,8 +46,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Columns resize to be the optimal size every time the model changes.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Fixed">
@@ -58,8 +58,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Columns are a fixed numbers of pixels wide.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="value__">
