@@ -1,3 +1,8 @@
+2003-07-25  Duncan Mak  <duncan@ximian.com>
+
+	* en/Gtk/TreeViewColumnSizing.xml: added documentation from
+	Jonathan Kessler <Jwkpiano1@comcast.net>.
+
 2003-07-24  John Luke  <jluke@cfl.rr.com>
 
 	* en/Rsvg.xml: add summary page
